--- a/css/home-style.css
+++ b/css/home-style.css
@@ -99,6 +99,14 @@ body {
 	width: 100%;
 }
 
+.nav-menu svg {
+	height: 48px;
+	width: 48px;
+	margin: 0 25px 0 0;
+}
+
+
+
 .button {
 	width: 44px;
 	height: 44px;
@@ -121,14 +129,9 @@ body {
 	color: black;
 }
 
-.buttonR {
-	background-color: #e1dd4f;
-	margin-left: 25px;
-}
-
 .buttonDenigri {
-	background-color: #e1dd4f;
-	width: 132px;
+	background-color: white;
+	width: 82px;
 	float: right;
 }
 
