--- a/css/home-style.css
+++ b/css/home-style.css
@@ -144,7 +144,6 @@ body {
 }
 
 .overlay-content {
-	height: 100%;
 	margin: 0;
 	padding: 0;
 	font-family: Helvetica;
@@ -189,8 +188,7 @@ body {
 	border-top-width: thin;
 	border-top-color: #e7e499;
 	box-shadow: 1px 0 0 0 #4d4d1b, -1px 0 0 0 rgba(40, 7, 9, 0.3);
-	display: flex;
-	flex-direction: column;
+	flex: 1;
 	font-size: 4vw;
 }
 
@@ -335,7 +333,7 @@ video {
 	float: right;
 }
 
-@media screen and (min-width: 375px) {
+@media screen and (min-width: 320px) {
 .dekstop {
 	display: none;
 }
