--- a/css/home-style.css
+++ b/css/home-style.css
@@ -311,6 +311,19 @@ video {
 	float: right;
 }
 
+.collapsible {
+  background-color: #777;
+  font-family: "Arial", Helvetica, sans-serif;
+  color: white;
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 10px;
+}
+
 @media screen and (min-width: 320px) {
 .dekstop {
 	display: none;
