--- a/css/home-style.css
+++ b/css/home-style.css
@@ -321,6 +321,20 @@ video {
   font-size: 10px;
 }
 
+.collapsible:after {
+  content: '\002B';
+  font-weight: bold;
+  float: right;
+  margin-left: 5px;
+}
+
+.collapsible__content {
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.2s ease-out;
+  font-family: "Arial", Helvetica, sans-serif;
+}
+
 @media screen and (min-width: 320px) {
 .dekstop {
 	display: none;
