--- a/css/home-style.css
+++ b/css/home-style.css
@@ -341,6 +341,7 @@ video {
   overflow: hidden;
   transition: max-height 0.2s ease-out;
   font-family: "Arial", Helvetica, sans-serif;
+  font-size: 10px;
 }
 
 @media screen and (min-width: 320px) {
