--- a/css/home-style.css
+++ b/css/home-style.css
@@ -329,6 +329,12 @@ video {
   content: "\2212";
 }
 
+.collapsible__tag {
+  padding: 0 10px;
+  font-family: "Arial", Helvetica, sans-serif;
+  font-size: 10px;
+}
+
 .collapsible__content {
   max-height: 0;
   overflow: hidden;
