--- a/css/home-style.css
+++ b/css/home-style.css
@@ -330,7 +330,7 @@ video {
 }
 
 .collapsible__tag {
-  padding: 0 10px;
+  margin: 0 5px 0 -1px;
   font-family: "Arial", Helvetica, sans-serif;
   font-size: 10px;
 }
