--- a/css/home-style.css
+++ b/css/home-style.css
@@ -281,10 +281,6 @@ video {
 }
 
 .titolo {
-
-	border-bottom-style: solid;
-	border-bottom-width: thin;
-	border-bottom-color: #4d4d1b;
 	display: flex;
 	flex-direction: column;
 	padding: 0;
@@ -342,6 +338,9 @@ video {
   font-family: "Arial", Helvetica, sans-serif;
   font-size: 10px;
   margin: 5px 0 0 0;
+  border-top-style: solid;
+  border-top-width: thin;
+  border-top-color: #4d4d1b;
 }
 
 @media screen and (min-width: 320px) {
