--- a/css/home-style.css
+++ b/css/home-style.css
@@ -338,6 +338,7 @@ video {
   font-family: "Arial", Helvetica, sans-serif;
   font-size: 10px;
   margin: 5px 0 0 0;
+  padding: 5px 0 0 0;
   border-top-style: solid;
   border-top-width: thin;
   border-top-color: #4d4d1b;
