--- a/css/home-style.css
+++ b/css/home-style.css
@@ -316,13 +316,15 @@ video {
 }
 
 .collapsible:after {
-  content: '\002B';
+  content: '\003E';
   font-weight: bold;
   float: right;
+  rotate: 90deg;
 }
 
 .active:after {
-  content: "\2212";
+  content: '\003E';
+  rotate: 270deg;
 }
 
 .collapsible__tag {
