--- a/css/home-style.css
+++ b/css/home-style.css
@@ -346,6 +346,23 @@ video {
   border-top-color: #4d4d1b;
 }
 
+.fa {
+	float: right;
+	font-size: 15px;
+	animation: slide1 1s ease-in-out infinite;
+}
+
+@keyframes slide1 {
+  0%,
+  100% {
+    transform: translate(0, 0);
+  }
+
+  50% {
+    transform: translate(0, 10px);
+  }
+}
+
 @media screen and (min-width: 320px) {
 .dekstop {
 	display: none;
