--- a/css/home-style.css
+++ b/css/home-style.css
@@ -162,20 +162,20 @@ body {
 }
 
 .designer {
-	font-size: 10vw;
+	font-size: 13px;
 	color: rgba(77,77,27,1);
 	margin: 0 16px;
 }
 
 .like {
-	font-size: 5vw;
+	font-size: 13px;
 	line-height: 1.6;
 	margin: 15px 16px;
 }
 
 .experience {
 	margin: 10px 0 5px 16px;
-	font-size: 4.5vw;
+	font-size: 13px;
 	color: rgba(77,77,27,1);
 }
 
@@ -185,11 +185,11 @@ body {
 	border-top-width: thin;
 	border-top-color: #e7e499;
 	box-shadow: 1px 0 0 0 #4d4d1b, -1px 0 0 0 rgba(40, 7, 9, 0.3);
-	font-size: 4vw;
+	font-size: 13px;
 }
 
 .tab p {
-	font-size: 4vw;
+	font-size: 13px;
 	list-style: none;
 	margin: 8px 0 0 8px;
 }
@@ -220,7 +220,7 @@ body {
 .menu-why {
 	position: fixed;
 	bottom: 2%;
-	font-size: 3.3vw;
+	font-size: 11px;
 	padding: 0 16px 0 16px;
 }
 
@@ -230,7 +230,6 @@ body {
 	margin: 0 6px;
 	width: 96%;
 	height: 5px;
-
 	display: flex;
 	border-bottom-style: solid;
 	border-bottom-width: thin;
