--- a/css/home-style.css
+++ b/css/home-style.css
@@ -31,6 +31,7 @@ body {
 .main {
 	color: #4d4d1b;
 	display: flex;
+	flex-direction: column;
 }
 
 .main::-webkit-scrollbar {
@@ -43,14 +44,13 @@ body {
 }
 
 .header {
-	top: 0;
 	z-index: 2;
-	width: 100%;
+	margin: 0 auto;
+	width: 96%;
 	background-color: rgba(225, 221, 79, 1);
 	font-family: "Arial", Helvetica, sans-serif;
 	font-size: 13px;
-	position: absolute;
-	}
+}
 
 .header-list{
 	list-style: none;
@@ -60,22 +60,6 @@ body {
 	padding: 0;
 }
 
-.andrea {
-	text-align: left;
-	display: flex;
-	float: left;
-	margin-top: 44px;
-	padding: 0 0 0 16px;
-}
-
-.learn{
-	float: right;
-	text-align: right;
-	display: flex;
-	margin-top: 44px;
-	padding: 0 16px 0 0;
-}
-
 .learn a {
 	color: #4d4d1b;
 }
@@ -83,7 +67,7 @@ body {
 .gradient {
 	background-image: linear-gradient(90deg, rgba(102,204,255,0), rgba(102, 204, 255, 1));
 	height: 8px;
-	margin: 8px 16px;
+	margin: 8px 0;
 }
 
 .menu {
@@ -245,16 +229,14 @@ body {
 
 .post {
 	display: flex;
-	flex-wrap: wrap;
-	margin: 67px 8px 0;
+	flex-direction: column;
 
 }
 
 .column {
-	flex: 100%;
-	max-width: 100%;
-	padding: 10px 8px;
-	margin: 10px 0;
+	display: flex;
+	width: 96%;
+	margin: 0 auto;
 	border-top-style: solid;
 	border-top-color: #e7e499;
 	box-shadow: 1px 1px 0 0 #4d4d1b, -1px 0 0 0 rgba(40, 7, 9, 0.3);
