--- a/css/home-style.css
+++ b/css/home-style.css
@@ -235,6 +235,7 @@ body {
 
 .column {
 	display: flex;
+	flex-direction: column;
 	width: 96%;
 	margin: 0 auto;
 	border-top-style: solid;
@@ -262,38 +263,17 @@ video {
 }
 
 .titolo {
-	display: flex;
-	flex-direction: column;
-	padding: 0;
-}
-
-.titolo-tag {
-	display: flex;
-	justify-content: space-between;
-	padding: 0;
-	margin: 0 0 5px 0;
-}
-
-.cliente {
-	font-family: "Arial", Helvetica, sans-serif;
-	font-size: 10px;
-	display: flex;
-	float: left;
-}
-
-.tag-cliente {
-	font-family: "Arial", Helvetica, sans-serif;
-	font-size: 10px;
-	display: flex;
-	float: right;
+	background: rgba(255,255,204,0.2);
+	border-bottom-style: solid;
+	border-bottom-width: thin;
+	border-bottom-color: #4d4d1b;
 }
 
 .collapsible {
   font-family: "Arial", Helvetica, sans-serif;
   cursor: pointer;
-  font-size: 10px;
-  text-align: left;
-  padding: 0;
+  font-size: 20px;
+  padding: 20px 8px 10px 8px;
 }
 
 .collapsible__tag {
