--- a/css/home-style.css
+++ b/css/home-style.css
@@ -237,7 +237,7 @@ body {
 	display: flex;
 	flex-direction: column;
 	width: 96%;
-	margin: 0 auto;
+	margin: 0 auto 15px;
 	border-top-style: solid;
 	border-top-color: #e7e499;
 	box-shadow: 1px 1px 0 0 #4d4d1b, -1px 0 0 0 rgba(40, 7, 9, 0.3);
@@ -263,7 +263,6 @@ video {
 }
 
 .titolo {
-	background: rgba(255,255,204,0.2);
 	border-bottom-style: solid;
 	border-bottom-width: thin;
 	border-bottom-color: #4d4d1b;
@@ -273,15 +272,23 @@ video {
   font-family: "Arial", Helvetica, sans-serif;
   cursor: pointer;
   font-size: 20px;
-  padding: 20px 8px 10px 8px;
+  padding: 8px 8px;
   display: flex;
   justify-content: space-between;
+  box-shadow: 0 2px 2px 0 rgba(77,77,27,0.2);
+  background: rgba(255,255,204,0.2);
 }
 
 .collapsible__tag {
-  margin: 0 5px 0 0;
+  margin: 0 8px 10px 0;
   font-family: "Arial", Helvetica, sans-serif;
-  font-size: 10px;
+  font-size: 12px;
+  padding: 4px 8px;
+  border-radius: 15px;
+  border: 1px solid;
+  border-color: #4d4d1b;
+  box-shadow: 1px 1px 0 0 #4d4d1b;
+  position: relative;
 }
 
 .collapsible__content {
@@ -289,9 +296,10 @@ video {
   overflow: hidden;
   transition: max-height 0.2s ease-out;
   font-family: "Arial", Helvetica, sans-serif;
-  font-size: 10px;
-  margin: 5px 0 0 0;
-  padding: 5px 0 0 0;
+  font-size: 12px;
+  padding: 0 45px 0 8px;
+  line-height: 1.6;
+  background: rgba(255,255,204,0.2);
 }
 
 .arrow1 {
