--- a/css/home-style.css
+++ b/css/home-style.css
@@ -47,7 +47,7 @@ body {
 	z-index: 2;
 	margin: 0 auto;
 	width: 96%;
-	background-color: rgba(225, 221, 79, 1);
+	background-color: #ffff00;
 	font-family: "Arial", Helvetica, sans-serif;
 	font-size: 13px;
 }
