--- a/css/style.css
+++ b/css/style.css
@@ -39,11 +39,11 @@ header {
 }
 .arrow {
   position: absolute;
-  width: 1.5em;
-  height: 1.5em;
+  width: 1.641em;
+  height: 1.641em;
   background-color: rgba(255, 255, 0,1);
   top: 0;
-  right: -1.5em;
+  right: -1.641em;
 }
 .arrow::after {
   content: '';
@@ -126,11 +126,11 @@ img {
   object-fit: cover;
 }
 .slide-title {
-  position: absolute;
-  bottom: 10%;
+  position: fixed;
+  bottom: calc(2.1em + 3px);
   width: 100%;
   padding: 0 1.625em;
-  margin-bottom: 2rem;
+  margin-bottom: 2.1rem;
 }
 .slide-title__inner {
   top: 0;
@@ -145,19 +145,20 @@ img {
   position: relative;
 }
 .slide-title::after {
-  content: '\203A';
-  transform: rotate(90deg);
+  content: '+';
   position: absolute;
-  right: calc(0px + 0.7em);
-  font-size: 2em;
-  width: 1em;
-  border-radius: 1em;
-  background-color: rgba(255,255,0,0.9);
+  width: 1.2em;
+  height: 1.2em;
   text-align: center;
-  color: rgba(34,34,33,0.8);
-  text-shadow: none;
-  top: -0.4rem;
+  border-radius: 1em;
+  font-size: 1.4em;
+  font-weight: 100;
+  right: 0;
+  top: 0;
   cursor: pointer;
+  margin-right: 1.4rem;
+  background-color: rgb(255, 255, 0);
+  color: rgb(34, 34, 33);
 }
 .slide-title__inner ul {
   padding: 0;
@@ -185,18 +186,16 @@ img {
 .menu {
   position: fixed;
   bottom: 0;
-  margin: 1.55em auto;
+  padding: 0.5em 0 0.6em;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   right: 0;
   left: 0;
   border-top: 1px solid rgba(246,246,246,0.4);
-  border-bottom: 1px solid rgba(246,246,246,0.4);
 }
 .menu a {
   text-transform: uppercase;
   cursor: pointer;
-  padding: 0.55rem 1.625rem;
 }
 
 @media screen and (min-width: 537px) and (min-height:) {
