--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,10 @@
 :root {
-box-sizing: border-box;
+  box-sizing: border-box;
+  height: 100%;
 }
 *,
-::before,
-::after {
+  ::before,
+  ::after {
   box-sizing: inherit;
 }
 body {
@@ -13,6 +14,7 @@ body {
   margin: 0;
   overscroll-behavior-y: contain;
   overscroll-behavior: none;
+  height: 100%;
 }
 a:link {
   text-decoration: none;
@@ -110,8 +112,8 @@ svg {
 .slide {
   scroll-snap-align: start;
   flex-shrink: 0;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   margin-right: 0;
   transform-origin: center center;
   transform: scale(1);
