--- a/css/style.css
+++ b/css/style.css
@@ -112,6 +112,7 @@ svg {
   flex-shrink: 0;
   width: 100vw;
   height: 100vh;
+  height: calc(var(--vh, 1vh) * 100);
   margin-right: 0;
   transform-origin: center center;
   transform: scale(1);
