--- a/css/style.css
+++ b/css/style.css
@@ -87,7 +87,7 @@ header:hover .dropdown-menu {
   background-color: rgba(34,34,33,0.3);
   color: rgba(255,255,0,1);
 }
-.active {
+.submenu > li > a.active {
   background-color: rgba(34,34,33,0.3);
   color: rgba(255,255,0,1);
 }
