--- a/css/style.css
+++ b/css/style.css
@@ -121,8 +121,8 @@ svg {
   overflow-y: hidden;
 }
 img {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   object-fit: cover;
 }
 .slide-title {
