--- a/css/style.css
+++ b/css/style.css
@@ -55,7 +55,7 @@ header {
   cursor: pointer;
 }
 .dropdown-menu {
-  display: none;
+  display: block;
   position: absolute;
   left: 0;
   top: 1.5em;
