--- a/css/style.css
+++ b/css/style.css
@@ -43,9 +43,10 @@ a:active {
   display: grid;
   grid-template-rows: repeat(2, auto);
   grid-template-columns: 100vw;
-  position: relative;
-  height: 100vh;
-  height: calc(var(--vh, 1vh) * 100);
+  position: fixed;
+  height: 100%;
+  /*  height: 100vh;
+  height: calc(var(--vh, 1vh) * 100); */
 }
 header {
   position: fixed;
