--- a/style.css
+++ b/style.css
@@ -127,15 +127,16 @@ svg {
 
 .slide-inside {
   display: none;
-  height: 0;
-  transition: 500ms ease-in-out height;
 }
 .none {
   display: none;
-  height: 100%;
+  height: 0;
+  transition: 500ms ease-in-out height;
 }
 .block {
   display: block;
+  height: 100%;
+
 }
 /* toggle main gallery overflow */
 .autoY {
@@ -146,7 +147,7 @@ svg {
 }
 .slide-inside > img {
   width: 100%;
-  height: 100%;
+  /* height: 100%; */
   object-fit: cover;
   float: right;
   margin-bottom: 0.312em;
