--- a/css/style.css
+++ b/css/style.css
@@ -43,11 +43,10 @@ a:active {
   display: grid;
   grid-template-rows: repeat(2, auto);
   grid-template-columns: 100vw;
-  position: fixed;
-  height: 100%;
-  /*  height: 100vh;
-  height: calc(var(--vh, 1vh) * 100); */
-}
+  position: relative;
+  height: 100vh;
+  height: calc(var(--vh, 1vh) * 100);
+  }
 header {
   position: fixed;
   z-index: 1;
@@ -117,25 +116,22 @@ svg {
   -webkit-overflow-scrolling: touch;
   overflow-x: auto;
   overflow-y: hidden;
-  grid-row: 1/2;
-  margin: 0.312em;
-  margin-bottom: 0;
+  margin: 0.312rem;
+  grid-row: 1/3;
 }
 .slide {
   scroll-snap-align: start;
   flex-shrink: 0;
-  width: 100vw;
-  margin: 0 auto;
   overflow-y: hidden;
 }
 
 .slide-inside {
   display: none;
+  height: 0;
+  transition: 500ms ease-in-out height;
 }
 .none {
   display: none;
-  height: 0;
-  transition: 500ms ease-in-out height;
 }
 .block {
   display: block;
@@ -150,8 +146,10 @@ svg {
 }
 .slide-inside > img {
   width: 100%;
-  height: 100%;
+  /* height: 100%; */
   object-fit: cover;
+  float: right;
+  margin-bottom: 0.312em;
 }
 .slide-inside > video {
   width: 100%;
@@ -172,25 +170,16 @@ svg {
   transition: 700ms ease-in-out margin-top, 700ms ease-in opacity;
   opacity: 0
 }
-
-.slide-title {
-  position: absolute;
-  bottom: 10%;
-  width: 100%;
-  padding: 0 1.625em;
-  margin-bottom: 2rem;
-}
 .section {
   font-family: 'Geogrotesque-Medium',sans-serif;
   font-size: 0.937em;
   color: rgba(34,34,33,1);
   text-transform: uppercase;
-  margin-left: 0.28rem;
   position: absolute;
-  grid-row: 1/2;
-  bottom: -1px;
+  bottom: 0;
   transition: 180ms ease-in-out opacity, 300ms ease-out transform;
   opacity: 1;
+  grid-row: 2/3;
 }
 .section > span {
   background-color: rgba(255,255,0,1);
@@ -199,35 +188,18 @@ svg {
 .section > span + span {
   padding-right: 0.8rem;
 }
-.tablet, .dekstop {
+.tablet, .desktop {
   display: none;
-}
-.menu {
-  position: fixed;
-  bottom: 0;
-  margin: 1.55em auto;
-  display: flex;
-  justify-content: space-between;
-  right: 0;
-  left: 0;
-  border-top: 1px solid rgba(246,246,246,0.4);
-  border-bottom: 1px solid rgba(246,246,246,0.4);
-}
-.menu a {
-  text-transform: uppercase;
-  cursor: pointer;
-  padding: 0.55rem 1.625rem;
 }
 
 .gallery-title {
   width: 100%;
   color: rgba(34,34,33,1);
-  grid-row: 2/3;
   position: relative;
   transition: 100ms ease-in-out margin-bottom;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
+}
+
+.description {
 }
 
 .gallery-title-main {
@@ -285,7 +257,6 @@ svg {
 .arrow-down-close {
   width: 2.7rem;
   height: 2.7rem;
-  display: flex;
   position: absolute;
   top: 1.287rem;
   right: 1.312rem;
@@ -341,15 +312,13 @@ svg {
 }
 
 
-
 .container.mod {
   overflow-y: hidden;
 }
 
 .gallery-title.mod {
-  margin-bottom: -85px;
+  margin-bottom: -74px;
   transition: 300ms ease-in-out margin-bottom;
-  background-color
 }
 .section.mod {
   opacity: 0;
@@ -360,7 +329,7 @@ svg {
   .tablet {
     display: block;
   }
-  .mobile, .dekstop {
+  .mobile, .desktop {
     display: none;
   }
   body {
@@ -374,6 +343,7 @@ svg {
   }
   .section {
     font-size: 1.375rem;
+    grid-row: 1/3;
   }
   .dot > img {
     width: 8.125rem;
@@ -418,14 +388,91 @@ svg {
   }
 }
 
-@media screen and (min-width: 1366px) {
+@media screen and (min-width: 1024px) {
   .tablet {
     display: none;
   }
   .mobile {
     display: none;
   }
-.dekstop {
+.desktop {
   display: block;
+}
+header {
+  margin-left: 0;
+}
+svg {
+  width: 5.2em;
+}
+.arrow-down-close {
+
+}
+.gallery-preview {
+  grid-row: 1/3;
+  margin: 0;
+}
+.section {
+  font-size: 1.475rem;
+  grid-row: 2/3;
+  margin-bottom: 130px;
+  margin-left: 0;
+}
+.section > span {
+  padding: 0.812rem 1.512rem 0 1.538rem;
+}
+.section > span + span {
+  padding-right: 1.2rem;
+}
+.gallery-title {
+  grid-row: 2/3;
+  position: absolute;
+  display: flex;
+  bottom: 0;
+  align-items: flex-end;
+}
+.gallery-title-main, .gallery-title-tag {
+  margin: 0 1.25rem;
+  width: auto;
+}
+.gallery-title-preview {
+  margin: 0 1em 0 2em;
+}
+.description {
+  display: inline-block;
+  background-color: rgba(255,255,0,1);
+  position: relative;
+  width: 50%;
+}
+.arrow-down-close {
+}
+.dot > img {
+  width: 4.5rem;
+}
+.title {
+  font-size: 1.95rem;
+}
+.gallery-title.mod {
+  margin-bottom: 0;
+}
+.gallery-title-preview {
+  transition: 300ms ease-in-out margin-bottom;
+  position: absolute;
+  right: 0;
+}
+.gallery-title-preview.mod {
+  transition: 300ms ease-in-out margin-bottom;
+  margin-bottom: -130px;
+}
+.block {
+  display: flex;
+  height: 100%;
+}
+.slide-inside > img {
+  width: auto;
+  height: 100%;
+  margin-bottom: 0;
+}
+.slide-inside > video {
+  width: auto;
 }
 }
