--- a/css/style.css
+++ b/css/style.css
@@ -43,17 +43,28 @@ a:active {
   display: grid;
   grid-template-rows: repeat(2, auto);
   grid-template-columns: 100vw;
-  position: relative;
-  height: 100vh;
-  height: calc(var(--vh, 1vh) * 100);
+  position: fixed;
+  height: 100%;
+  /* height: 100vh;
+  height: calc(var(--vh, 1vh) * 100); */
   }
-header {
+
+/* Header */
+
+  header {
   position: fixed;
   z-index: 1;
   top: 2.062em;
   margin-left: 0.312em;
   color: rgba(255,255,0,1);
   cursor: pointer;
+}
+svg {
+  width: 4.2em;
+  position: fixed;
+  z-index: 1;
+  top: 2.062em;
+  right: 1em;
 }
 .arrow {
   width: 2.187em;
@@ -101,13 +112,8 @@ header {
   transform: translate(0,-5px);
 }
 
-svg {
-  width: 4.2em;
-  position: fixed;
-  z-index: 1;
-  top: 2.062em;
-  right: 1em;
-}
+/* Main Gallery */
+
 .gallery-preview {
   display: grid;
   grid-template-columns: repeat(6, 100vw);
@@ -116,8 +122,8 @@ svg {
   -webkit-overflow-scrolling: touch;
   overflow-x: auto;
   overflow-y: hidden;
-  margin: 0.312rem;
   grid-row: 1/3;
+  position: relative;
 }
 .slide {
   scroll-snap-align: start;
@@ -149,7 +155,6 @@ svg {
   /* height: 100%; */
   object-fit: cover;
   float: right;
-  margin-bottom: 0.312em;
 }
 .slide-inside > video {
   width: 100%;
@@ -170,83 +175,83 @@ svg {
   transition: 700ms ease-in-out margin-top, 700ms ease-in opacity;
   opacity: 0
 }
-.section {
-  font-family: 'Geogrotesque-Medium',sans-serif;
-  font-size: 0.937em;
-  color: rgba(34,34,33,1);
-  text-transform: uppercase;
-  position: absolute;
-  bottom: 0;
-  transition: 180ms ease-in-out opacity, 300ms ease-out transform;
-  opacity: 1;
-  grid-row: 2/3;
-}
-.section > span {
-  background-color: rgba(255,255,0,1);
-  padding: 0.812rem 0.312rem 0 0.438rem;
-}
-.section > span + span {
-  padding-right: 0.8rem;
-}
 .tablet, .desktop {
   display: none;
 }
 
+/* Titles and Categories */
+
+.categories {
+  font-size: 0.937rem;
+  font-family: 'Geogrotesque-Bold', sans serif;
+  text-transform: uppercase;
+  display: flex;
+  overflow: auto;
+  margin: 0;
+  color: hsl(224, 81%, 86%);
+}
+.categories > span {
+  border-right: solid 1px hsla(224,81%,86%, 0.3);
+  padding: 0.812rem 1.625rem;
+  background-color: hsla(224,81%,86%, 0.4);
+
+}
+/* Dots */
+
+.dots {
+  margin: 1.13rem 0.5rem 1.437rem;
+  display: inline-flex;
+}
+.dots > div {
+  border-radius: 1em;
+  border: solid 1px hsl(224, 81%, 86%);
+  margin: 0 0.453rem;
+  width: 0.6rem;
+  height: 0.6rem;
+}
+.selected {
+  background-color: hsl(224, 81%, 86%);
+}
+
 .gallery-title {
   width: 100%;
-  color: rgba(34,34,33,1);
-  position: relative;
+  position: absolute;
   transition: 100ms ease-in-out margin-bottom;
+  grid-row: 2/3;
+  bottom: 0;
+  border-top: solid 1.2px hsl(224, 100%, 93%);
 }
 
 .description {
+  position: relative;
+  padding: 1.25rem 1rem 0;
 }
 
 .gallery-title-main {
-  margin: 0 0.75rem;
-  width: 70%;
+  margin: 0;
+  margin-bottom: 0.3rem;
 }
-.gallery-title-tag {
-  margin: 0 0.75rem;
-  width: 70%;
-}
-
-.gallery-title-preview-inside {
-  display: inline-flex;
-  width: 100%;
-  overflow: scroll;
-  padding: 0.312em 0 0 0;
-}
-
-.gallery-title-preview-inside > a {
-  cursor: pointer;
-  opacity: 0.8;
-  margin-bottom: 0;
-}
-.dot > img {
-  margin-bottom: -5px;
-  width: 69px;
-}
-.mini-tablet {
-  display: none;
+.title.activeMain {
+  display: inline-block;
+  margin: 0;
+  color: hsl(59, 100%, 75%);
 }
 .title {
   display: none;
-  font-family: 'C800', sans-serif;
-  font-size: 1.16rem;
-  margin: 0.812rem 0;
+  font-family: 'Geogrotesque-Medium', sans-serif;
+  font-size: 1.875rem;
   line-height: 1.35;
+  color: hsl(224, 81%, 86%);
 }
-
+.gallery-title-tag {
+  margin: 0;
+  color: hsl(224, 100%, 93%);
+}
 .tag {
   display: none;
   font-family: 'Geogrotesque-Medium', sans-serif;
   font-size: 1.03rem;
-  margin: 0 0 1.687rem 0;
-}
-.activeMain {
-  display: block;
-  margin: 1.287rem 0 0.4rem 0;
+  margin: 0;
 }
 .activeTag {
   display: block;
@@ -255,21 +260,19 @@ svg {
 /*Arrow animation*/
 
 .arrow-down-close {
-  width: 2.7rem;
-  height: 2.7rem;
+  width: 1.997rem;
+  height: 1.997rem;
   position: absolute;
-  top: 1.287rem;
-  right: 1.312rem;
-  background-color: rgb(255, 255, 0);
-  border-radius: 30px;
-  border: solid 1px rgb(34,34,33);
+  top: 0;
+  right: 0.6rem;
+  margin: 1.75rem 0 0;
 }
 .arrow-down-close:before {
   content: "";
   display: inline-block;
-  height: 15px;
+  height: 14px;
   width: 4px;
-  background-color: rgb(34, 34, 33);
+  background-color: hsl(224, 61%, 90%);
   border-radius: 10px;
   position: relative;
   transition: 300ms ease-in-out transform;
@@ -278,9 +281,9 @@ svg {
 .arrow-down-close:after {
   content: "";
   display: inline-block;
-  height: 15px;
+  height: 14px;
   width: 4px;
-  background-color: rgb(34, 34, 33);
+  background-color: hsl(224, 61%, 90%);
   border-radius: 10px;
   position: relative;
   transition: 300ms ease-in-out transform;
@@ -288,37 +291,38 @@ svg {
 
 .arrow-down-close:before {
   transform: rotate(-45deg);
-  left: 14px;
-  top: 14px;
+  left: 10px;
+  top: 11px;
 }
 .arrow-down-close:after {
   transform: rotate(45deg);
-  left: 19px;
-  top: 14px;
+  left: 15px;
+  top: 11px;
 }
 .arrow-down-close.open:before {
   transform: translateX(5px) rotate(-45deg) scale(1.7);
   width: 3px;
-  background-color: rgb(255, 255, 0);
+  background-color: hsl(59, 100%, 65%);
 }
 .arrow-down-close.open:after {
   transform: translateX(-2px) rotate(45deg) scale(1.7);
   width: 3px;
-  background-color: rgb(255, 255, 0);
+  background-color: hsl(59, 100%, 65%);
 }
 
 .arrow-down-close.open {
-  background-color: rgba(34,34,33,1);
 }
 
+/* Animation after click arrow */
 
 .container.mod {
   overflow-y: hidden;
 }
 
 .gallery-title.mod {
-  margin-bottom: -74px;
-  transition: 300ms ease-in-out margin-bottom;
+  margin-bottom: -87px;
+  transition: 300ms ease-in-out margin-bottom, 400ms ease-in background-color;
+  background-color: hsl(224, 100%, 60%);
 }
 .section.mod {
   opacity: 0;
