--- a/css/style.css
+++ b/css/style.css
@@ -39,12 +39,18 @@ a:hover {
 a:active {
   background-color: rgba(255,255,255,0.5);
 }
+.container-in {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+}
 .container {
   display: grid;
   grid-template-rows: repeat(2, auto);
   grid-template-columns: 100vw;
-  position: fixed;
+  position: absolute;
   height: 100%;
+  overflow-y: scroll;
   /* height: 100vh;
   height: calc(var(--vh, 1vh) * 100); */
   }
