--- a/css/style.css
+++ b/css/style.css
@@ -130,6 +130,7 @@ svg {
   overflow-y: hidden;
   grid-row: 1/3;
   position: relative;
+  height: calc(100% + 44px);
 }
 .slide {
   scroll-snap-align: start;
@@ -224,7 +225,7 @@ svg {
   position: absolute;
   transition: 100ms ease-in-out margin-bottom;
   grid-row: 2/3;
-  bottom: 0;
+  bottom: -44px;
   border-top: solid 1.2px hsl(224, 100%, 93%);
 }
 
