--- a/css/style.css
+++ b/css/style.css
@@ -127,7 +127,7 @@ svg {
   scroll-behavior: smooth;
   -webkit-overflow-scrolling: touch;
   overflow-x: auto;
-  overflow-y: hidden;
+  overflow-y: scroll;
   grid-row: 1/3;
   position: relative;
   height: calc(100% + 44px);
@@ -135,7 +135,6 @@ svg {
 .slide {
   scroll-snap-align: start;
   flex-shrink: 0;
-  overflow-y: hidden;
 }
 
 .slide-inside {
