--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,7 @@ a:active {
 }
 .container-in {
   width: 100%;
-  height: 100%;
+  height: calc(100% + 44px);
   position: fixed;
 }
 .container {
@@ -127,7 +127,7 @@ svg {
   scroll-behavior: smooth;
   -webkit-overflow-scrolling: touch;
   overflow-x: auto;
-  overflow-y: scroll;
+  overflow-y: hidden;
   grid-row: 1/3;
   position: relative;
   height: calc(100% + 44px);
