--- a/css/style.css
+++ b/css/style.css
@@ -211,8 +211,8 @@ svg {
   border-radius: 1em;
   border: solid 1px hsl(224, 81%, 86%);
   margin: 0 0.453rem;
-  width: 0.6rem;
-  height: 0.6rem;
+  width: 0.375rem;
+  height: 0.375rem;
 }
 .selected {
   background-color: hsl(224, 81%, 86%);
@@ -225,6 +225,7 @@ svg {
   grid-row: 2/3;
   bottom: 0;
   border-top: solid 1.2px hsl(224, 100%, 93%);
+  background-image: linear-gradient(hsla(224,81%,86%,1), hsla(224,81%,86%,0));
 }
 
 .description {
