--- a/css/style.css
+++ b/css/style.css
@@ -197,7 +197,6 @@ svg {
   color: hsla(224, 81%, 86%, 0.5);
 }
 .categories > span {
-  border-right: solid 1px hsla(224,81%,86%, 0.3);
   padding: 0.812rem 1.625rem;
 
 }
@@ -209,7 +208,7 @@ svg {
 }
 .dots > div {
   border-radius: 1em;
-  border: solid 1px hsl(224, 81%, 86%);
+  background-color:hsla(224, 81%, 86%, 0.6);
   margin: 0 0.453rem;
   width: 0.375rem;
   height: 0.375rem;
@@ -225,7 +224,7 @@ svg {
   grid-row: 2/3;
   bottom: 0;
   border-top: solid 1.2px hsl(224, 100%, 93%);
-  background-image: linear-gradient(hsla(224,81%,86%,1), hsla(224,81%,86%,0));
+  background-image: linear-gradient(to left, hsla(224,81%,86%,1), hsla(224,81%,86%,0));
 }
 
 .description {
