--- a/css/style.css
+++ b/css/style.css
@@ -51,6 +51,7 @@ a:active {
   position: absolute;
   height: 100%;
   overflow-y: scroll;
+  overflow-x: hidden;
   /* height: 100vh;
   height: calc(var(--vh, 1vh) * 100); */
   }
@@ -193,7 +194,7 @@ svg {
   text-transform: uppercase;
   display: flex;
   overflow: auto;
-  margin-right: -0.625rem;
+  margin-left: -0.625rem;
   color: hsla(224, 81%, 86%, 0.5);
 }
 .categories > span {
