--- a/css/style.css
+++ b/css/style.css
@@ -214,7 +214,7 @@ svg {
   width: 0.375rem;
   height: 0.375rem;
 }
-.selected {
+.dots.selected {
   background-color: hsla(59, 100%, 86%, 1);
 }
 
