--- a/css/style.css
+++ b/css/style.css
@@ -210,9 +210,11 @@ svg {
 .dots > div {
   border-radius: 1em;
   background-color:hsla(224, 81%, 86%, 0.6);
-  margin: 0 0.453rem;
   width: 0.375rem;
   height: 0.375rem;
+}
+.dots > div + div {
+  margin: 0 0.353rem;	
 }
 .dots.selected {
   background-color: hsla(59, 100%, 86%, 1);
