--- a/css/style.css
+++ b/css/style.css
@@ -212,9 +212,10 @@ svg {
   background-color:hsla(224, 81%, 86%, 0.6);
   width: 0.375rem;
   height: 0.375rem;
+  margin-right: 0.353rem; 
 }
 .dots > div + div {
-  margin: 0 0.353rem;	
+  margin-left: 0.353rem;	
 }
 .dots.selected {
   background-color: hsla(59, 100%, 86%, 1);
