--- a/css/style.css
+++ b/css/style.css
@@ -327,7 +327,7 @@ svg {
 .gallery-title.mod {
   margin-bottom: -64px;
   transition: 300ms ease-in-out margin-bottom, 400ms ease-in background-color;
-  background-color: hsl(224, 100%, 60%);
+  background: rgb(255,255,0);
 }
 .section.mod {
   opacity: 0;
