--- a/css/style.css
+++ b/css/style.css
@@ -70,6 +70,7 @@ svg {
   z-index: 1;
   bottom: 0.8em;
   right: 1em;
+  transition: 300ms ease-out bottom;
 }
 svg.none-svg {
   bottom: -2em;
@@ -328,7 +329,7 @@ svg.none-svg {
 }
 
 .gallery-title.mod {
-  margin-bottom: -64px;
+  margin-bottom: -59px;
   transition: 300ms ease-in-out margin-bottom, 400ms ease-in background-color;
   background: rgb(255,255,0);
 }
