--- a/css/style.css
+++ b/css/style.css
@@ -48,10 +48,8 @@ a:active {
   display: grid;
   grid-template-rows: repeat(2, auto);
   grid-template-columns: 100%;
-  height: 100%;
-  position: fixed;
-  /* height: 100vh;
-  height: calc(var(--vh, 1vh) * 100); */
+  height: 100vh;
+  height: calc(var(--vh, 1vh) * 100);
   }
 
 /* Header */
