--- a/css/style.css
+++ b/css/style.css
@@ -54,15 +54,6 @@ a:active {
 
 /* Header */
 
-  header {
-  position: fixed;
-  z-index: 1;
-  top: 2.062em;
-  margin-left: 0.312em;
-  color: rgba(255,255,0,1);
-  cursor: pointer;
-  display: none;
-}
 svg {
   width: 2.5em;
   position: fixed;
@@ -89,20 +80,15 @@ svg.none-svg {
   cursor: pointer;
   transform: rotate(-90deg);
 }
-.dropdown-menu {
-  display: none;
-  margin-top: 0;
-  width: 2.187em;
-  background-color: rgba(255,255,0,0.5);
-}
 .submenu {
   padding: 0.3em 0 0 0;
   margin: 0;
   list-style: none;
+  display: inline-flex;
 }
 .submenu > li {
   margin-top: 0;
-  padding-top: 0.4em;
+  padding: 0 0.6em 0 0;
 }
 .submenu > li > a {
   display: block;
@@ -121,6 +107,42 @@ svg.none-svg {
 }
 
 /* Main Gallery */
+
+.about {
+  position: absolute;
+  color: rgb(34,34,33);
+  padding: 1rem;
+  padding-bottom: 0;
+  background: rgb(255,255,0);
+  height: 100%;
+}
+.about > h1 {
+  font-family: 'C800', sans-serif;
+  font-size: 1rem;
+}
+.about > p {
+  color: rgba(34,34,33,0.8);
+  margin: 0;
+  margin-bottom: 2rem;
+  line-height: 1.35;
+}
+
+.exp {
+  display: flex;
+  flex-direction: column;
+  margin: 0.2rem 0 1.3rem 0;
+  border-bottom: solid 1px rgba(34,34,33,0.2);
+}
+.work{
+  list-style: none;
+  display: inline-flex;
+  justify-content: space-between;
+  padding: 0;
+  margin: 0.5rem 0;
+}
+.work > li + li {
+  opacity: 0.6;
+}
 
 .gallery-preview {
   display: grid;
