--- a/css/style.css
+++ b/css/style.css
@@ -50,6 +50,8 @@ a:active {
   grid-template-columns: 100%;
   height: 100vh;
   height: calc(var(--vh, 1vh) * 100);
+  padding: 0.5rem;
+  padding-bottom: 0;
   }
 
 /* Header */
@@ -174,7 +176,6 @@ svg.none-svg {
   flex-shrink: 0;
   height: 100%;
   overflow-y: scroll;
-  padding: 0.5rem;
   padding-bottom: 0;
 }
 
